--- a/TestTask.MVC/Views/Home/Index.cshtml
+++ b/TestTask.MVC/Views/Home/Index.cshtml
@@ -2,27 +2,27 @@
 <div asp-validation-summary="ModelOnly"></div>
 <form method="post" class="row g-3 text-center p-2">
     <div class="col-md-4">
-        <label class="col-form-label">Фамилия</label>
+        <label class="col-form-label font-weight-bold">Фамилия</label>
         <input type="text" class="form-control" asp-for="LastName"/>
         <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
     <div class="col-md-4">
-        <label class="col-form-label" >Имя</label>
+        <label class="col-form-label font-weight-bold" >Имя</label>
         <input type="text" class="form-control col-xs-3" asp-for="Name" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="col-md-4">
-        <label class="col-form-label">Отчество</label>
+        <label class="col-form-label font-weight-bold">Отчество</label>
         <input type="text" class="form-control" asp-for="MiddleName" />
         <span asp-validation-for="MiddleName" class="text-danger"></span>
     </div>
     <div class="col-md-4">
-        <label class="col-form-label">День Рождения</label>
+        <label class="col-form-label font-weight-bold">День Рождения</label>
         <input type="date" class="form-control" asp-for="Birthday"/>
         <span asp-validation-for="Birthday" class="text-danger"></span>
     </div>
     <div class="col-md-8">
-        <label class="col-form-label">СНИЛС</label>
+        <label class="col-form-label font-weight-bold">СНИЛС</label>
         <input type="text" class="form-control" asp-for="Snils" />
         <span asp-validation-for="Snils" class="text-danger"></span>
     </div>
