--- a/TestTask.MVC/Views/Shared/_Layout.cshtml
+++ b/TestTask.MVC/Views/Shared/_Layout.cshtml
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
     <h2 class="p-2 text-center bg-dark text-white">Обработка формы</h2>
