Add AutoMapper and Repository

--- a/TestTask.MVC/Views/Home/Index.cshtml
+++ b/TestTask.MVC/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class="col-md-4">
         <label class="col-form-label font-weight-bold">День Рождения</label>
-        <input type="date" class="form-control" asp-for="Birthday"/>
+        <input type="text" class="form-control" asp-for="Birthday"/>
         <span asp-validation-for="Birthday" class="text-danger"></span>
     </div>
     <div class="col-md-8">
