--- a/TestTask.MVC/Views/Shared/_Layout.cshtml
+++ b/TestTask.MVC/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-    <h2 class="p-2 text-center bg-dark text-white">Обработка формы</h2>
+    <h2 class="p-2 text-center bg-dark text-white">Создание фор</h2>
     @RenderBody()
 </body>
 </html>
