Feat(TestTask.Web): Add Info Page

--- a/TestTask.MVC/Views/Shared/_Layout.cshtml
+++ b/TestTask.MVC/Views/Shared/_Layout.cshtml
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>@ViewBag.Title</title>
+    <title>Тестовое задание</title>
     <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-    <h2 class="p-2 text-center bg-dark text-white">Создание фор</h2>
+    <h2 class="p-2 text-center bg-dark text-white">Форма</h2>
     @RenderBody()
 </body>
 </html>
